Fix Header overlapped by other components (#355)
ant popover has z-index: 1030. We set Header z-index to 10000 to make
it the highest component.

--- a/src/components/AppWrapper/styles.module.less
+++ b/src/components/AppWrapper/styles.module.less
@@ -22,7 +22,7 @@
     top: 0;
     bottom: 0;
     left: 0;
-    z-index: 3;
+    z-index: 10000;
     display: flex;
     align-items: center;
     justify-content: space-between;
